--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8080
-MONGO_URL = mongodb+srv://abhi:kings11punjab@cluster0.uhrq4q3.mongodb.net/food-app
+MONGO_URL = //insert ur mongo url
 JWT_SECRET=mystrongsecretkey123
